--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,19 +1,58 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="dracula">
 <head>
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@5/themes.css" rel="stylesheet" type="text/css" />
     <meta charset="UTF-8">
     <title>EpicTask</title>
 </head>
 <body>
 
-<h1>Epic Task</h1>
+<nav class="navbar bg-base-300 shadow-sm">
+    <div class="flex-1">
+        <a class="btn btn-ghost text-xl">EpicTask</a>
+    </div>
+    <div class="flex-none">
+        <ul class="menu menu-horizontal px-1">
+            <li>
+                <details>
+                    <summary>🌎</summary>
+                    <ul class="bg-base-100 rounded-t-none p-2">
+                        <li><a href="?lang=pt_BR">🇧🇷</a></li>
+                        <li><a href="?lang=en_US">🏴󠁧󠁢󠁥󠁮󠁧󠁿</a></li>
+                    </ul>
+                </details>
+            </li>
+        </ul>
+    </div>
+</nav>
 
-<ul>
-    <li th:each="task : ${tasks}" >
-        <span th:text="${task.title}"></span>
-        <span th:text="${task.score}"></span>
-    </li>
-</ul>
+<a href="/task/form" class="btn btn-primary" th:text="#{task.new}"></a>
+
+<div th:if="${message}" role="alert" class="alert alert-success alert-soft m-4">
+    <span th:text="${message}"></span>
+</div>
+
+<main class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 place-items-center gap-4 p-8">
+    <div th:each="task : ${tasks}" class="card card-border bg-base-300 w-96">
+        <div th:text="${task.score + ' pts'}" class="badge badge-accent m-4"></div>
+
+        <div class="card-body items-center">
+            <h2 th:text="${task.title}" class="card-title"></h2>
+            <p th:text="${task.description}" ></p>
+            <div th:text="${task.status + '%'}"
+                 class="radial-progress bg-secondary text-secondary-content border-secondary border-4"
+                 th:style="${'--value:' + task.status}" th:aria-valuenow="${task.status}" role="progressbar">
+            </div>
+        </div>
+
+        <div class="card-actions justify-end m-4">
+            <button class="btn btn-primary" th:text="#{delete}"></button>
+        </div>
+    </div>
+</main>
+
 
 </body>
 </html>
