--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,6 +13,32 @@
     <div class="flex-1">
         <a class="btn btn-ghost text-xl">EpicTask</a>
     </div>
+    
+  <div class="flex gap-2">
+    <input type="text" placeholder="Search" class="input input-bordered w-24 md:w-auto" />
+    <div class="dropdown dropdown-end">
+      <div tabindex="0" role="button" class="btn btn-ghost btn-circle avatar">
+        <div class="w-10 rounded-full">
+          <img
+            alt="Tailwind CSS Navbar component"
+            src="https://img.daisyui.com/images/stock/photo-1534528741775-53994a69daeb.webp" />
+        </div>
+      </div>
+      <ul
+        tabindex="0"
+        class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow">
+        <li>
+          <a class="justify-between">
+            Profile
+            <span class="badge">New</span>
+          </a>
+        </li>
+        <li><a>Settings</a></li>
+        <li><a></a></li>
+      </ul>
+    </div>
+  </div>
+</div>
     <div class="flex-none">
         <ul class="menu menu-horizontal px-1">
             <li>
@@ -26,6 +52,7 @@
             </li>
         </ul>
     </div>
+    
 </nav>
 
 <a href="/task/form" class="btn btn-primary" th:text="#{task.new}"></a>
