feat(ui): Adiciona informações do usuário na barra de navegação
- Adicionada a exibição do avatar e do email do usuário autenticado na barra de navegação.
- Incluída uma opção de 'Logout' no menu de perfil para permitir que o usuário saia da sessão.

Essa personalização melhora a experiência do usuário, tornando a interface mais interativa e contextual.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,32 +13,6 @@
     <div class="flex-1">
         <a class="btn btn-ghost text-xl">EpicTask</a>
     </div>
-    
-  <div class="flex gap-2">
-    <input type="text" placeholder="Search" class="input input-bordered w-24 md:w-auto" />
-    <div class="dropdown dropdown-end">
-      <div tabindex="0" role="button" class="btn btn-ghost btn-circle avatar">
-        <div class="w-10 rounded-full">
-          <img
-            alt="Tailwind CSS Navbar component"
-            src="https://img.daisyui.com/images/stock/photo-1534528741775-53994a69daeb.webp" />
-        </div>
-      </div>
-      <ul
-        tabindex="0"
-        class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow">
-        <li>
-          <a class="justify-between">
-            Profile
-            <span class="badge">New</span>
-          </a>
-        </li>
-        <li><a>Settings</a></li>
-        <li><a></a></li>
-      </ul>
-    </div>
-  </div>
-</div>
     <div class="flex-none">
         <ul class="menu menu-horizontal px-1">
             <li>
@@ -51,8 +25,24 @@
                 </details>
             </li>
         </ul>
+        <div class="dropdown dropdown-end">
+            <div tabindex="0" role="button" class="btn btn-ghost btn-circle avatar">
+                <div class="w-10 rounded-full">
+                    <img
+                            alt="avatar do usuário"
+                            th:src="${user.attributes.avatar_url}" />
+                </div>
+            </div>
+            <ul
+                    tabindex="0"
+                    class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow">
+                <li>
+                    <a class="justify-between" th:text="${user.attributes.email}"></a>
+                </li>
+                <li><a href="/logout">Logout</a></li>
+            </ul>
+        </div>
     </div>
-    
 </nav>
 
 <a href="/task/form" class="btn btn-primary" th:text="#{task.new}"></a>
